# F1_Season_Calculator

./: .dockerignore  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXED.md  FOLDER_STRUCTURE_FIXED.md  IMPROVEMENTS.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.md  SETUP_GUIDE.md  TODO.md  UI_IMPROVEMENTS.md  __init__.py  api.py  app.py  championships.csv  commands.py  db.py  docker-compose.yml  drivers.py  f1.py  logic.py  pyproject.toml  requirements.txt  rounds.py  setup.py  views.py
.claude/: settings.local.json
.github/: dependabot.yml  issue_template.md  pull_request_template.md
app/: config.py  main.py  templating.py
championship/: __init__.py  api.py  commands.py  errors.py  logic.py  models.py  season_commands.py  validators.py  views.py
data/: README.md  championships_sample.csv
docs/: README.md
graphql_api/: __init__.py  integration.py  mutations.py  queries.py  resolvers.py  schema.py  types.py
instructions/: IMPROVEMENTS.md
scripts/: diagnose_db.py
static/: style.css
templates/: 400.html  404.html  405.html  500.html  all_championship_wins.html  base.html  championship.html  championship_win_probability.html  create_championship.html  driver.html  driver_position_detail.html  driver_positions.html  driver_wins.html  drivers.html  head_to_head.html  highest_position.html  highest_rounds_won.html  index.html  largest_championship_wins.html  min_races_to_win.html  most_common_runner_up.html  tipping_points.html
tests/: conftest.py  test_api.py  test_db.py  test_errors.py  (+6 more)
(+178 files in other folders)
