[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-season-calculator"
version = "2.0.0"
description = "Analyze Formula 1 championship scenarios across every possible race combination"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "typer>=0.9",
    "cachetools>=5.3",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "playwright>=1.40",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
f1 = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["championship*", "tests*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/api", "tests/e2e"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
